// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppHeader /> CanHandleFallbackNavMenus story renders snapshot 1`] = `
<header
  class="app-header app-header--orientation-horizontal app-header--style-docked"
>
  <div>
    <div
      class="app-header__content"
    >
      <div
        class="app-header-title"
      >
        <div
          class="app-header-title__title"
        >
          <span
            class="text text--headline-sm"
          >
            Bodies of water
          </span>
        </div>
        <div
          class="app-header-title__sub-title"
        >
          <span
            class="text text--body-md"
          >
            They're cool!
          </span>
        </div>
      </div>
      <div
        class="app-header__nav-groups"
      >
        <nav
          aria-label="group-2"
          class="app-header__nav-group"
        >
          <ul>
            <li>
              <div
                class="menu"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="app-header__nav-item app-header__nav-item--button"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r3e:"
                >
                  <span
                    class="app-header__nav-item--button app-header__nav-item--icon-layout-none"
                  >
                    <span
                      class="text text--appHeader-label"
                    >
                      Show Profile
                    </span>
                  </span>
                  <svg
                    aria-hidden="true"
                    class="icon"
                    fill="currentColor"
                    height="24px"
                    style="--icon-size: 24px;"
                    viewBox="0 0 24 24"
                    width="24px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </ul>
        </nav>
      </div>
      <div
        class="app-header__menu"
      >
        <button
          aria-label="Show Menu"
          class="app-header__nav-item app-header__nav-item--button"
        >
          <span
            class="app-header__nav-item--button app-header__nav-item--icon-layout-icon-only"
          >
            <svg
              aria-hidden="true"
              class="icon"
              fill="currentColor"
              height="24px"
              style="--icon-size: 24px;"
              viewBox="0 0 24 24"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.5 17.6342V16.1345H20.5V17.6342H3.5ZM3.5 12.7497V11.2497H20.5V12.7497H3.5ZM3.5 7.86498V6.36523H20.5V7.86498H3.5Z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</header>
`;

exports[`<AppHeader /> Default story renders snapshot 1`] = `
<header
  class="app-header app-header--orientation-horizontal app-header--style-docked"
>
  <div>
    <div
      class="app-header__content"
    >
      <div
        class="app-header-title"
      >
        <div
          class="app-header-title__title"
        >
          <span
            class="text text--headline-sm"
          >
            Bodies of water
          </span>
        </div>
        <div
          class="app-header-title__sub-title"
        >
          <span
            class="text text--body-md"
          >
            They're cool!
          </span>
        </div>
      </div>
      <div
        class="app-header__nav-groups"
      >
        <nav
          aria-label="lakes"
          class="app-header__nav-group"
        >
          <ul>
            <li>
              <div
                class="menu"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="app-header__nav-item app-header__nav-item--button"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r2:"
                >
                  <span
                    class="app-header__nav-item--button app-header__nav-item--icon-layout-none"
                  >
                    <span
                      class="text text--appHeader-label"
                    >
                      Lakes
                    </span>
                    <svg
                      aria-hidden="true"
                      class="icon"
                      fill="currentColor"
                      height="24px"
                      style="--icon-size: 24px;"
                      viewBox="0 0 24 24"
                      width="24px"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </li>
            <li>
              <div
                class="menu"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="app-header__nav-item app-header__nav-item--button"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r8:"
                >
                  <span
                    class="app-header__nav-item--button app-header__nav-item--icon-layout-none"
                  >
                    <span
                      class="text text--appHeader-label"
                    >
                      Oceans
                    </span>
                    <svg
                      aria-hidden="true"
                      class="icon"
                      fill="currentColor"
                      height="24px"
                      style="--icon-size: 24px;"
                      viewBox="0 0 24 24"
                      width="24px"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </li>
            <li>
              <div
                class="menu"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="app-header__nav-item app-header__nav-item--button"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:re:"
                >
                  <span
                    class="app-header__nav-item--button app-header__nav-item--icon-layout-none"
                  >
                    <span
                      class="text text--appHeader-label"
                    >
                      Rivers
                    </span>
                    <svg
                      aria-hidden="true"
                      class="icon"
                      fill="currentColor"
                      height="24px"
                      style="--icon-size: 24px;"
                      viewBox="0 0 24 24"
                      width="24px"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </li>
          </ul>
        </nav>
        <nav
          aria-label="group-2"
          class="app-header__nav-group"
        >
          <ul>
            <li>
              <a
                class="app-header__nav-item app-header__nav-item--link app-header__nav-item--is-external"
                href="https://example.org"
                target="_blank"
              >
                <span
                  class="app-header__nav-item--icon-layout-none"
                >
                  <span
                    class="text text--appHeader-label"
                  >
                    Documentation
                  </span>
                </span>
              </a>
            </li>
            <li>
              <a
                class="app-header__nav-item app-header__nav-item--link app-header__nav-item--is-external"
                href="https://example.org"
                target="_blank"
              >
                <span
                  class="app-header__nav-item--icon-layout-none"
                >
                  <span
                    class="text text--appHeader-label"
                  >
                    GitHub
                  </span>
                </span>
              </a>
            </li>
            <li>
              <div
                class="menu"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="app-header__nav-item app-header__nav-item--button"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:rk:"
                >
                  <span
                    class="app-header__nav-item--button app-header__nav-item--icon-layout-left"
                  >
                    <span
                      class="text text--appHeader-label"
                    >
                      Profile
                      <div
                        class="text text--appHeader-subLabel"
                      >
                        sublabel
                      </div>
                    </span>
                    <div
                      aria-label="Avatar for user Lorem Ipsum"
                      class="avatar avatar--sm avatar--text avatar--color-scheme-1"
                      role="img"
                    >
                      <span
                        class="text text--label-sm"
                      >
                        L
                      </span>
                    </div>
                  </span>
                  <svg
                    aria-hidden="true"
                    class="icon"
                    fill="currentColor"
                    height="24px"
                    style="--icon-size: 24px;"
                    viewBox="0 0 24 24"
                    width="24px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </ul>
        </nav>
      </div>
      <div
        class="app-header__menu"
      >
        <button
          aria-label="Show Menu"
          class="app-header__nav-item app-header__nav-item--button"
        >
          <span
            class="app-header__nav-item--button app-header__nav-item--icon-layout-icon-only"
          >
            <svg
              aria-hidden="true"
              class="icon"
              fill="currentColor"
              height="24px"
              style="--icon-size: 24px;"
              viewBox="0 0 24 24"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.5 17.6342V16.1345H20.5V17.6342H3.5ZM3.5 12.7497V11.2497H20.5V12.7497H3.5ZM3.5 7.86498V6.36523H20.5V7.86498H3.5Z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</header>
`;

exports[`<AppHeader /> DefaultWithImageLogo story renders snapshot 1`] = `
<header
  class="app-header app-header--orientation-horizontal app-header--style-docked"
>
  <div>
    <div
      class="app-header__content"
    >
      <div
        class="app-header-title"
      >
        <a
          aria-label="homepage"
          class="app-header__home-link"
          href="https://example.org"
        >
          <div
            class="app-header-title__title app-header-title--has-logo"
          >
            <div
              class="fpo h-[36px] w-[175px]"
              tabindex="0"
            >
              Logo goes here
            </div>
          </div>
        </a>
      </div>
      <div
        class="app-header__nav-groups"
      >
        <nav
          aria-label="lakes"
          class="app-header__nav-group"
        >
          <ul>
            <li>
              <div
                class="menu"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="app-header__nav-item app-header__nav-item--button"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r10:"
                >
                  <span
                    class="app-header__nav-item--button app-header__nav-item--icon-layout-none"
                  >
                    <span
                      class="text text--appHeader-label"
                    >
                      Lakes
                    </span>
                    <svg
                      aria-hidden="true"
                      class="icon"
                      fill="currentColor"
                      height="24px"
                      style="--icon-size: 24px;"
                      viewBox="0 0 24 24"
                      width="24px"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </li>
            <li>
              <div
                class="menu"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="app-header__nav-item app-header__nav-item--button"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r16:"
                >
                  <span
                    class="app-header__nav-item--button app-header__nav-item--icon-layout-none"
                  >
                    <span
                      class="text text--appHeader-label"
                    >
                      Oceans
                    </span>
                    <svg
                      aria-hidden="true"
                      class="icon"
                      fill="currentColor"
                      height="24px"
                      style="--icon-size: 24px;"
                      viewBox="0 0 24 24"
                      width="24px"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </li>
            <li>
              <div
                class="menu"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="app-header__nav-item app-header__nav-item--button"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r1c:"
                >
                  <span
                    class="app-header__nav-item--button app-header__nav-item--icon-layout-none"
                  >
                    <span
                      class="text text--appHeader-label"
                    >
                      Rivers
                    </span>
                    <svg
                      aria-hidden="true"
                      class="icon"
                      fill="currentColor"
                      height="24px"
                      style="--icon-size: 24px;"
                      viewBox="0 0 24 24"
                      width="24px"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </li>
          </ul>
        </nav>
        <nav
          aria-label="group-2"
          class="app-header__nav-group"
        >
          <ul>
            <li>
              <a
                class="app-header__nav-item app-header__nav-item--link app-header__nav-item--is-external"
                href="https://example.org"
                target="_blank"
              >
                <span
                  class="app-header__nav-item--icon-layout-none"
                >
                  <span
                    class="text text--appHeader-label"
                  >
                    Documentation
                  </span>
                </span>
              </a>
            </li>
            <li>
              <a
                class="app-header__nav-item app-header__nav-item--link app-header__nav-item--is-external"
                href="https://example.org"
                target="_blank"
              >
                <span
                  class="app-header__nav-item--icon-layout-none"
                >
                  <span
                    class="text text--appHeader-label"
                  >
                    GitHub
                  </span>
                </span>
              </a>
            </li>
            <li>
              <div
                class="menu"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="app-header__nav-item app-header__nav-item--button"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r1i:"
                >
                  <span
                    class="app-header__nav-item--button app-header__nav-item--icon-layout-left"
                  >
                    <span
                      class="text text--appHeader-label"
                    >
                      Profile
                      <div
                        class="text text--appHeader-subLabel"
                      >
                        sublabel
                      </div>
                    </span>
                    <div
                      aria-label="Avatar for user Lorem Ipsum"
                      class="avatar avatar--sm avatar--text avatar--color-scheme-1"
                      role="img"
                    >
                      <span
                        class="text text--label-sm"
                      >
                        L
                      </span>
                    </div>
                  </span>
                  <svg
                    aria-hidden="true"
                    class="icon"
                    fill="currentColor"
                    height="24px"
                    style="--icon-size: 24px;"
                    viewBox="0 0 24 24"
                    width="24px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </ul>
        </nav>
      </div>
      <div
        class="app-header__menu"
      >
        <button
          aria-label="Show Menu"
          class="app-header__nav-item app-header__nav-item--button"
        >
          <span
            class="app-header__nav-item--button app-header__nav-item--icon-layout-icon-only"
          >
            <svg
              aria-hidden="true"
              class="icon"
              fill="currentColor"
              height="24px"
              style="--icon-size: 24px;"
              viewBox="0 0 24 24"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.5 17.6342V16.1345H20.5V17.6342H3.5ZM3.5 12.7497V11.2497H20.5V12.7497H3.5ZM3.5 7.86498V6.36523H20.5V7.86498H3.5Z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</header>
`;

exports[`<AppHeader /> FloatingVerticalOrientation story renders snapshot 1`] = `
<header
  class="app-header app-header--orientation-vertical app-header--style-floating"
>
  <div>
    <div
      class="app-header__content"
    >
      <div
        class="app-header-title"
      >
        <div
          class="app-header-title__title"
        >
          <span
            class="text text--headline-sm"
          >
            Bodies of water
          </span>
        </div>
        <div
          class="app-header-title__sub-title"
        >
          <span
            class="text text--body-md"
          >
            They're cool!
          </span>
        </div>
      </div>
      <div
        class="drawer-content"
      >
        <nav
          aria-label="lakes"
          class="drawer-content__nav-group"
        >
          <ul>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-tree"
            >
              <menu>
                <div
                  class="drawer-content__header-container"
                >
                  <div>
                    <span
                      class="app-header__nav-item--button app-header_nav-item-label"
                    >
                      <span
                        class="text text--overline-sm"
                      >
                        Lakes
                      </span>
                    </span>
                  </div>
                </div>
                <ul>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link app-header__nav-item--is-current"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Lake Superior
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Lake Tahoe
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Crater Lake
                        </span>
                      </span>
                    </a>
                  </li>
                </ul>
              </menu>
            </li>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-tree"
            >
              <menu>
                <div
                  class="drawer-content__header-container"
                >
                  <div>
                    <span
                      class="app-header__nav-item--button app-header_nav-item-label"
                    >
                      <span
                        class="text text--overline-sm"
                      >
                        Oceans
                      </span>
                    </span>
                  </div>
                </div>
                <ul>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Pacific Ocean
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Atlantic Ocean
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Arctic Ocean
                        </span>
                      </span>
                    </a>
                  </li>
                </ul>
              </menu>
            </li>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-tree"
            >
              <menu>
                <div
                  class="drawer-content__header-container"
                >
                  <div>
                    <span
                      class="app-header__nav-item--button app-header_nav-item-label"
                    >
                      <span
                        class="text text--overline-sm"
                      >
                        Rivers
                      </span>
                    </span>
                  </div>
                </div>
                <ul>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Nile River
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Amazon River
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Danube River
                        </span>
                      </span>
                    </a>
                  </li>
                </ul>
              </menu>
            </li>
          </ul>
        </nav>
        <nav
          aria-label="group-2"
          class="drawer-content__nav-group"
        >
          <ul>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-link"
            >
              <a
                class="app-header__nav-item app-header__nav-item--link app-header__nav-item--is-external"
                href="https://example.org"
                target="_blank"
              >
                <span
                  class="app-header__nav-item--icon-layout-none"
                >
                  <span
                    class="text text--appHeader-label"
                  >
                    Documentation
                  </span>
                </span>
                <svg
                  aria-hidden="true"
                  class="icon"
                  fill="currentColor"
                  height="24px"
                  style="--icon-size: 24px;"
                  viewBox="0 0 24 24"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.04425 18.3943L6 17.35L15.8405 7.5H7.89425V6H18.3943V16.5H16.8943V8.55375L7.04425 18.3943Z"
                  />
                </svg>
              </a>
            </li>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-link"
            >
              <a
                class="app-header__nav-item app-header__nav-item--link app-header__nav-item--is-external"
                href="https://example.org"
                target="_blank"
              >
                <span
                  class="app-header__nav-item--icon-layout-none"
                >
                  <span
                    class="text text--appHeader-label"
                  >
                    GitHub
                  </span>
                </span>
                <svg
                  aria-hidden="true"
                  class="icon"
                  fill="currentColor"
                  height="24px"
                  style="--icon-size: 24px;"
                  viewBox="0 0 24 24"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.04425 18.3943L6 17.35L15.8405 7.5H7.89425V6H18.3943V16.5H16.8943V8.55375L7.04425 18.3943Z"
                  />
                </svg>
              </a>
            </li>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-separator"
            >
              <hr
                class="hr app-header__nav-item--separator"
                name="line-0"
                type="separator"
              />
            </li>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-menu"
            >
              <div
                class="menu"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="app-header__menu-trigger app-header__nav-item app-header__nav-item--button"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r32:"
                >
                  <svg
                    aria-hidden="true"
                    class="icon"
                    fill="currentColor"
                    height="24px"
                    style="--icon-size: 24px;"
                    viewBox="0 0 24 24"
                    width="24px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
                    />
                  </svg>
                  <span
                    class="app-header__nav-item--button app-header__nav-item--icon-layout-left"
                  >
                    <span
                      class="text text--appHeader-label"
                    >
                      Profile
                      <div
                        class="text text--appHeader-subLabel"
                      >
                        sublabel
                      </div>
                    </span>
                    <div
                      aria-label="Avatar for user Lorem Ipsum"
                      class="avatar avatar--sm avatar--text avatar--color-scheme-1"
                      role="img"
                    >
                      <span
                        class="text text--label-sm"
                      >
                        L
                      </span>
                    </div>
                  </span>
                </button>
              </div>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
</header>
`;

exports[`<AppHeader /> MobileFloatingVerticalEmpty story renders snapshot 1`] = `
<header
  class="app-header app-header--orientation-vertical app-header--style-floating"
>
  <div>
    <div
      class="app-header__content"
    >
      <div
        class="app-header-title"
      >
        <div
          class="app-header-title__title"
        >
          <span
            class="text text--headline-sm"
          >
            Bodies of water
          </span>
        </div>
        <div
          class="app-header-title__sub-title"
        >
          <span
            class="text text--body-md"
          >
            They're cool!
          </span>
        </div>
      </div>
      <div
        class="drawer-content"
      />
    </div>
  </div>
</header>
`;

exports[`<AppHeader /> StyleFloating story renders snapshot 1`] = `
<header
  class="app-header app-header--orientation-horizontal app-header--style-floating"
>
  <div>
    <div
      class="app-header__content"
    >
      <div
        class="app-header-title"
      >
        <div
          class="app-header-title__title"
        >
          <span
            class="text text--headline-sm"
          >
            Bodies of water
          </span>
        </div>
        <div
          class="app-header-title__sub-title"
        >
          <span
            class="text text--body-md"
          >
            They're cool!
          </span>
        </div>
      </div>
      <div
        class="app-header__nav-groups"
      >
        <nav
          aria-label="lakes"
          class="app-header__nav-group"
        >
          <ul>
            <li>
              <div
                class="menu"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="app-header__nav-item app-header__nav-item--button"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r1u:"
                >
                  <span
                    class="app-header__nav-item--button app-header__nav-item--icon-layout-none"
                  >
                    <span
                      class="text text--appHeader-label"
                    >
                      Lakes
                    </span>
                    <svg
                      aria-hidden="true"
                      class="icon"
                      fill="currentColor"
                      height="24px"
                      style="--icon-size: 24px;"
                      viewBox="0 0 24 24"
                      width="24px"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </li>
            <li>
              <div
                class="menu"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="app-header__nav-item app-header__nav-item--button"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r24:"
                >
                  <span
                    class="app-header__nav-item--button app-header__nav-item--icon-layout-none"
                  >
                    <span
                      class="text text--appHeader-label"
                    >
                      Oceans
                    </span>
                    <svg
                      aria-hidden="true"
                      class="icon"
                      fill="currentColor"
                      height="24px"
                      style="--icon-size: 24px;"
                      viewBox="0 0 24 24"
                      width="24px"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </li>
            <li>
              <div
                class="menu"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="app-header__nav-item app-header__nav-item--button"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r2a:"
                >
                  <span
                    class="app-header__nav-item--button app-header__nav-item--icon-layout-none"
                  >
                    <span
                      class="text text--appHeader-label"
                    >
                      Rivers
                    </span>
                    <svg
                      aria-hidden="true"
                      class="icon"
                      fill="currentColor"
                      height="24px"
                      style="--icon-size: 24px;"
                      viewBox="0 0 24 24"
                      width="24px"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </li>
          </ul>
        </nav>
        <nav
          aria-label="group-2"
          class="app-header__nav-group"
        >
          <ul>
            <li>
              <a
                class="app-header__nav-item app-header__nav-item--link app-header__nav-item--is-external"
                href="https://example.org"
                target="_blank"
              >
                <span
                  class="app-header__nav-item--icon-layout-none"
                >
                  <span
                    class="text text--appHeader-label"
                  >
                    Documentation
                  </span>
                </span>
              </a>
            </li>
            <li>
              <a
                class="app-header__nav-item app-header__nav-item--link app-header__nav-item--is-external"
                href="https://example.org"
                target="_blank"
              >
                <span
                  class="app-header__nav-item--icon-layout-none"
                >
                  <span
                    class="text text--appHeader-label"
                  >
                    GitHub
                  </span>
                </span>
              </a>
            </li>
            <li>
              <div
                class="menu"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="app-header__nav-item app-header__nav-item--button"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r2g:"
                >
                  <span
                    class="app-header__nav-item--button app-header__nav-item--icon-layout-left"
                  >
                    <span
                      class="text text--appHeader-label"
                    >
                      Profile
                      <div
                        class="text text--appHeader-subLabel"
                      >
                        sublabel
                      </div>
                    </span>
                    <div
                      aria-label="Avatar for user Lorem Ipsum"
                      class="avatar avatar--sm avatar--text avatar--color-scheme-1"
                      role="img"
                    >
                      <span
                        class="text text--label-sm"
                      >
                        L
                      </span>
                    </div>
                  </span>
                  <svg
                    aria-hidden="true"
                    class="icon"
                    fill="currentColor"
                    height="24px"
                    style="--icon-size: 24px;"
                    viewBox="0 0 24 24"
                    width="24px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </ul>
        </nav>
      </div>
      <div
        class="app-header__menu"
      >
        <button
          aria-label="Show Menu"
          class="app-header__nav-item app-header__nav-item--button"
        >
          <span
            class="app-header__nav-item--button app-header__nav-item--icon-layout-icon-only"
          >
            <svg
              aria-hidden="true"
              class="icon"
              fill="currentColor"
              height="24px"
              style="--icon-size: 24px;"
              viewBox="0 0 24 24"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.5 17.6342V16.1345H20.5V17.6342H3.5ZM3.5 12.7497V11.2497H20.5V12.7497H3.5ZM3.5 7.86498V6.36523H20.5V7.86498H3.5Z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</header>
`;

exports[`<AppHeader /> VerticalDefaultWithImageLogo story renders snapshot 1`] = `
<header
  class="app-header app-header--orientation-vertical app-header--style-docked"
>
  <div>
    <div
      class="app-header__content"
    >
      <div
        class="app-header-title"
      >
        <a
          aria-label="homepage"
          class="app-header__home-link"
          href="https://example.org"
        >
          <div
            class="app-header-title__title app-header-title--has-logo"
          >
            <div
              class="fpo h-[36px] w-[175px]"
              tabindex="0"
            >
              Logo goes here
            </div>
          </div>
        </a>
      </div>
      <div
        class="drawer-content"
      >
        <nav
          aria-label="lakes"
          class="drawer-content__nav-group"
        >
          <ul>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-tree"
            >
              <menu>
                <div
                  class="drawer-content__header-container"
                >
                  <div>
                    <span
                      class="app-header__nav-item--button app-header_nav-item-label"
                    >
                      <span
                        class="text text--overline-sm"
                      >
                        Lakes
                      </span>
                    </span>
                  </div>
                </div>
                <ul>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link app-header__nav-item--is-current"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Lake Superior
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Lake Tahoe
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Crater Lake
                        </span>
                      </span>
                    </a>
                  </li>
                </ul>
              </menu>
            </li>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-tree"
            >
              <menu>
                <div
                  class="drawer-content__header-container"
                >
                  <div>
                    <span
                      class="app-header__nav-item--button app-header_nav-item-label"
                    >
                      <span
                        class="text text--overline-sm"
                      >
                        Oceans
                      </span>
                    </span>
                  </div>
                </div>
                <ul>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Pacific Ocean
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Atlantic Ocean
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Arctic Ocean
                        </span>
                      </span>
                    </a>
                  </li>
                </ul>
              </menu>
            </li>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-tree"
            >
              <menu>
                <div
                  class="drawer-content__header-container"
                >
                  <div>
                    <span
                      class="app-header__nav-item--button app-header_nav-item-label"
                    >
                      <span
                        class="text text--overline-sm"
                      >
                        Rivers
                      </span>
                    </span>
                  </div>
                </div>
                <ul>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Nile River
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Amazon River
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Danube River
                        </span>
                      </span>
                    </a>
                  </li>
                </ul>
              </menu>
            </li>
          </ul>
        </nav>
        <nav
          aria-label="group-2"
          class="drawer-content__nav-group"
        >
          <ul>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-link"
            >
              <a
                class="app-header__nav-item app-header__nav-item--link app-header__nav-item--is-external"
                href="https://example.org"
                target="_blank"
              >
                <span
                  class="app-header__nav-item--icon-layout-none"
                >
                  <span
                    class="text text--appHeader-label"
                  >
                    Documentation
                  </span>
                </span>
                <svg
                  aria-hidden="true"
                  class="icon"
                  fill="currentColor"
                  height="24px"
                  style="--icon-size: 24px;"
                  viewBox="0 0 24 24"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.04425 18.3943L6 17.35L15.8405 7.5H7.89425V6H18.3943V16.5H16.8943V8.55375L7.04425 18.3943Z"
                  />
                </svg>
              </a>
            </li>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-link"
            >
              <a
                class="app-header__nav-item app-header__nav-item--link app-header__nav-item--is-external"
                href="https://example.org"
                target="_blank"
              >
                <span
                  class="app-header__nav-item--icon-layout-none"
                >
                  <span
                    class="text text--appHeader-label"
                  >
                    GitHub
                  </span>
                </span>
                <svg
                  aria-hidden="true"
                  class="icon"
                  fill="currentColor"
                  height="24px"
                  style="--icon-size: 24px;"
                  viewBox="0 0 24 24"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.04425 18.3943L6 17.35L15.8405 7.5H7.89425V6H18.3943V16.5H16.8943V8.55375L7.04425 18.3943Z"
                  />
                </svg>
              </a>
            </li>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-separator"
            >
              <hr
                class="hr app-header__nav-item--separator"
                name="line-0"
                type="separator"
              />
            </li>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-menu"
            >
              <div
                class="menu"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="app-header__menu-trigger app-header__nav-item app-header__nav-item--button"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r38:"
                >
                  <svg
                    aria-hidden="true"
                    class="icon"
                    fill="currentColor"
                    height="24px"
                    style="--icon-size: 24px;"
                    viewBox="0 0 24 24"
                    width="24px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
                    />
                  </svg>
                  <span
                    class="app-header__nav-item--button app-header__nav-item--icon-layout-left"
                  >
                    <span
                      class="text text--appHeader-label"
                    >
                      Profile
                      <div
                        class="text text--appHeader-subLabel"
                      >
                        sublabel
                      </div>
                    </span>
                    <div
                      aria-label="Avatar for user Lorem Ipsum"
                      class="avatar avatar--sm avatar--text avatar--color-scheme-1"
                      role="img"
                    >
                      <span
                        class="text text--label-sm"
                      >
                        L
                      </span>
                    </div>
                  </span>
                </button>
              </div>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
</header>
`;

exports[`<AppHeader /> VerticalOrientation story renders snapshot 1`] = `
<header
  class="app-header app-header--orientation-vertical app-header--style-docked"
>
  <div>
    <div
      class="app-header__content"
    >
      <div
        class="app-header-title"
      >
        <div
          class="app-header-title__title"
        >
          <span
            class="text text--headline-sm"
          >
            Bodies of water
          </span>
        </div>
        <div
          class="app-header-title__sub-title"
        >
          <span
            class="text text--body-md"
          >
            They're cool!
          </span>
        </div>
      </div>
      <div
        class="drawer-content"
      >
        <nav
          aria-label="lakes"
          class="drawer-content__nav-group"
        >
          <ul>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-tree"
            >
              <menu>
                <div
                  class="drawer-content__header-container"
                >
                  <div>
                    <span
                      class="app-header__nav-item--button app-header_nav-item-label"
                    >
                      <span
                        class="text text--overline-sm"
                      >
                        Lakes
                      </span>
                    </span>
                  </div>
                </div>
                <ul>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link app-header__nav-item--is-current"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Lake Superior
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Lake Tahoe
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Crater Lake
                        </span>
                      </span>
                    </a>
                  </li>
                </ul>
              </menu>
            </li>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-tree"
            >
              <menu>
                <div
                  class="drawer-content__header-container"
                >
                  <div>
                    <span
                      class="app-header__nav-item--button app-header_nav-item-label"
                    >
                      <span
                        class="text text--overline-sm"
                      >
                        Oceans
                      </span>
                    </span>
                  </div>
                </div>
                <ul>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Pacific Ocean
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Atlantic Ocean
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Arctic Ocean
                        </span>
                      </span>
                    </a>
                  </li>
                </ul>
              </menu>
            </li>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-tree"
            >
              <menu>
                <div
                  class="drawer-content__header-container"
                >
                  <div>
                    <span
                      class="app-header__nav-item--button app-header_nav-item-label"
                    >
                      <span
                        class="text text--overline-sm"
                      >
                        Rivers
                      </span>
                    </span>
                  </div>
                </div>
                <ul>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Nile River
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Amazon River
                        </span>
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      class="app-header__nav-item app-header__nav-item--link"
                      href="https://example.org"
                    >
                      <span
                        class="app-header__nav-item--icon-layout-none"
                      >
                        <span
                          class="text text--appHeader-label"
                        >
                          Danube River
                        </span>
                      </span>
                    </a>
                  </li>
                </ul>
              </menu>
            </li>
          </ul>
        </nav>
        <nav
          aria-label="group-2"
          class="drawer-content__nav-group"
        >
          <ul>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-link"
            >
              <a
                class="app-header__nav-item app-header__nav-item--link app-header__nav-item--is-external"
                href="https://example.org"
                target="_blank"
              >
                <span
                  class="app-header__nav-item--icon-layout-none"
                >
                  <span
                    class="text text--appHeader-label"
                  >
                    Documentation
                  </span>
                </span>
                <svg
                  aria-hidden="true"
                  class="icon"
                  fill="currentColor"
                  height="24px"
                  style="--icon-size: 24px;"
                  viewBox="0 0 24 24"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.04425 18.3943L6 17.35L15.8405 7.5H7.89425V6H18.3943V16.5H16.8943V8.55375L7.04425 18.3943Z"
                  />
                </svg>
              </a>
            </li>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-link"
            >
              <a
                class="app-header__nav-item app-header__nav-item--link app-header__nav-item--is-external"
                href="https://example.org"
                target="_blank"
              >
                <span
                  class="app-header__nav-item--icon-layout-none"
                >
                  <span
                    class="text text--appHeader-label"
                  >
                    GitHub
                  </span>
                </span>
                <svg
                  aria-hidden="true"
                  class="icon"
                  fill="currentColor"
                  height="24px"
                  style="--icon-size: 24px;"
                  viewBox="0 0 24 24"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.04425 18.3943L6 17.35L15.8405 7.5H7.89425V6H18.3943V16.5H16.8943V8.55375L7.04425 18.3943Z"
                  />
                </svg>
              </a>
            </li>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-separator"
            >
              <hr
                class="hr app-header__nav-item--separator"
                name="line-0"
                type="separator"
              />
            </li>
            <li
              class="drawer-content__nav-group-item drawer-content__nav-group-item--type-menu"
            >
              <div
                class="menu"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="app-header__menu-trigger app-header__nav-item app-header__nav-item--button"
                  data-headlessui-state=""
                  id="headlessui-menu-button-:r2s:"
                >
                  <svg
                    aria-hidden="true"
                    class="icon"
                    fill="currentColor"
                    height="24px"
                    style="--icon-size: 24px;"
                    viewBox="0 0 24 24"
                    width="24px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
                    />
                  </svg>
                  <span
                    class="app-header__nav-item--button app-header__nav-item--icon-layout-left"
                  >
                    <span
                      class="text text--appHeader-label"
                    >
                      Profile
                      <div
                        class="text text--appHeader-subLabel"
                      >
                        sublabel
                      </div>
                    </span>
                    <div
                      aria-label="Avatar for user Lorem Ipsum"
                      class="avatar avatar--sm avatar--text avatar--color-scheme-1"
                      role="img"
                    >
                      <span
                        class="text text--label-sm"
                      >
                        L
                      </span>
                    </div>
                  </span>
                </button>
              </div>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
</header>
`;
